# recommender_systems

./: .gitignore  LEEME.md  README.md  cross_validation.py  i_o.py  knn_main.py  main.py  pmf_main.py  pyproject.toml  svd_cold_start.py  svd_main.py
LAB_A_models/: top_1_ok_model.pkl  top_1_ok_model_meta.pkl  top_2_ok_model.pkl  top_2_ok_model_meta.pkl  top_3_ok_model.pkl  top_3_ok_model_meta.pkl  top_4_ok_model.pkl  top_4_ok_model_meta.pkl  top_5_ok_model.pkl  top_5_ok_model_meta.pkl
collaborative/: __init__.py  algorithm.py  cold_start.py  knn.py  metrics.py  pmf.py  similarity.py  strategy.py
data/collaborative_filtering/: test.csv
ml_assets/: item_encoder.joblib  user_encoder.joblib
notebooks/: change_train.ipynb  deep_learning.ipynb  eda_collaborative_filtering.ipynb  lab_A.ipynb
optuna/: optuna_recommender.db  optuna_study.db
schemes/: decision_tree.excalidraw
